# chess

./: .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  dockerfile
backend/.sqlx/: query-1a2716ad9e7416b634a6c5e5ef03bd9aa8d83802a67f8db6b93be40e9f57348b.json  query-1b6d121b6efc48999cb9ed1f1459e7b5772b2f50f7db0725ed904956871e1c56.json  query-2a30d8c67001dbcd59b95b6db05263f7594f03b3846fedc2aa70480f5b5a3603.json  query-2d7186cbca71a009883466b15e3733e1b67131c6a01c111db24bf8aa3c168a2e.json  query-332fea7f77b22b9a7ed00dbd724283fd630a72efba4665d5f0815ca282f955da.json  query-3ea499bcb08a5388904ee5bc80fdcf530152c48d1d44ac7aac15e62e7a2f3f48.json  query-6a5ad6c771976e5f88b4c66b83837d07f6f7fabd87898b6a6115b4297c2995c5.json  query-732889b9f2c78185bbe0975e77cbacb5fa87cea6f21b166c4b216d2e2597c201.json  query-79d7edda13cf41230f4a469b0f5e8e8f9682a17412ced04cbbcfcd04855cf6fa.json  query-87bf863c0667c228844547b9892e7d944ee422d3311c72fab1df1792fe8131ba.json  query-9103504110001b27b7b645641cf3dcbd5e914b07343040e41cbb7b8744fc531d.json  query-a4024751d3a8a20cc068bc95c3436ce4100293d07b3ad135cc93d93bb901e646.json  query-a827a470c299b7ce6448187f7a5d732be28bf1c4fd28d00025de501ae11df172.json  query-c142506306232876e5de78a3e09bf599f73068ac45695c8c6c4cb1c1e7df1d7a.json  query-c5b2b1441fe480af65f77c46662ccd895ffe07727600cf1fdcc997cd3aa2f62f.json  query-e3bde8759e9a34c6fa15ab416db71ac19bd0c77468273495dbf07249a99cb751.json  query-e6191351233138f210cb0d0aa52ac8a8e7a06136d09711873f0c7ba99607c3f0.json  query-ebcd91046a39aef000b729e904cd6fe3aab62bb6e00c57968282bb0c92ae5b14.json  (+1 more)
(+45 files in other folders)
