[package]
name = "chess-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono", "uuid"] }
tower = "0.5"
dotenv = "0.15"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chess = "3.2"
rand = { version = "0.8", features = ["std_rng"] }